@@ -1,6 +1,6 @@
 hildon-application-manager (1:2.1.8~unreleased) unstable; urgency=low
 
-  * Fixes: NB#80270, NB#83096, NB#82350, NB#83057.
+  * Fixes: NB#80270, NB#83096, NB#82350, NB#83057, NB#80933.
 
  -- Marius Vollmer <marius.vollmer@nokia.com>  Tue, 25 Mar 2008 23:54:37 +0200
 
